--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- Google materials icons -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
