Meteocard is now available for 'Virage' surf spot

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <li class="dropdown" dropdown nav-link dropdown-toggle >
             <a dropdownToggle class="nav-link dropdown-toggle" role="button">Surf Spots</a>
             <div *dropdownMenu class="dropdown-menu">
-                <a class="dropdown-item">Le virage</a>
+                <a class="dropdown-item" routerLink="/le-virage">Le virage</a>
                 <a class="dropdown-item" >Vivier</a>
                 <a class="dropdown-item" >Yoff</a>
                 <a class="dropdown-item" >Skew Point</a>
