--- a/src/app/meteoCard/meteoCard.component.html
+++ b/src/app/meteoCard/meteoCard.component.html
@@ -1,1 +1,17 @@
-<link href="//fr.surf-forecast.com/stylesheets/widget.css" media="screen" rel="stylesheet" type="text/css" /><div class="wf-width-cont surf-fc-widget"><div class="widget-container"><div class="external-cont"><iframe class="surf-fc-i" allowtransparency="true" src="//fr.surf-forecast.com/breaks/Le-Virage/forecasts/widget/a" scrolling="no" frameborder="0" marginwidth="0" marginheight="0"></iframe><div class="footer"></div></div></div></div>
+<link href="//fr.surf-forecast.com/stylesheets/widget.css" media="screen" rel="stylesheet" type="text/css" />
+
+<div class="wf-width-cont surf-fc-widget">
+	<div class="widget-container">
+		<div class="external-cont">
+			<iframe 
+				class="surf-fc-i" 
+				allowtransparency="true" 
+				[src]= "sanitizer.bypassSecurityTrustResourceUrl(foreCastUrl)"
+				scrolling="no" 
+				frameborder="0" 
+				marginwidth="auto" 
+				marginheight="auto">
+			</iframe>
+		</div>
+	</div>
+</div>
