--- a/src/app/meteoCard/meteoCard.component.html
+++ b/src/app/meteoCard/meteoCard.component.html
@@ -1,6 +1,6 @@
 <link href="//fr.surf-forecast.com/stylesheets/widget.css" media="screen" rel="stylesheet" type="text/css" />
 
-<div class="wf-width-cont surf-fc-widget">
+<div class="wf-width-cont surf-fc-widget center">
 	<div class="widget-container">
 		<div class="external-cont">
 			<iframe 
