Generic component for a surfSpot page

--- a/src/app/pages/le-virage/le-virage.component.html
+++ b/src/app/pages/le-virage/le-virage.component.html
@@ -1,5 +1,5 @@
 <div class = "text-center">
   <h3>{{surfSpotName}}</h3>
   <app-card></app-card>
-  <app-meteoCard></app-meteoCard>
+  <app-meteoCard [foreCastUrl] = foreCastUrl></app-meteoCard>
 </div>
