--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,12 +9,11 @@
         <li class="dropdown" dropdown nav-link dropdown-toggle >
             <a dropdownToggle class="nav-link dropdown-toggle" role="button">Surf Spots</a>
             <div *dropdownMenu class="dropdown-menu">
-                <a class="dropdown-item" routerLink="/le-virage">Le virage</a>
-                <a class="dropdown-item" >Vivier</a>
-                <a class="dropdown-item" >Yoff</a>
-                <a class="dropdown-item" >Skew Point</a>
-                <a class="dropdown-item" >No Return</a>
-                <a class="dropdown-item" >Lieu de prière</a>    
+                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Le-Virage']">Le virage</a>
+                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Vivier']">Vivier</a>
+                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Yoff-Beach']">Yoff</a>
+                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Baiesdes-Carpes']">Baie des Carpes</a>
+                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Corniche-Ouest']">Corniche Ouest</a>    
             </div>
         </li>
         
