--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                 <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Le-Virage']">Le virage</a>
                 <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Vivier']">Vivier</a>
                 <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Yoff-Beach']">Yoff</a>
-                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Baiesdes-Carpes']">Baie des Carpes</a>
+                <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Baiedes-Carpes']">Baie des Carpes</a>
                 <a class="dropdown-item" [routerLink]="['surfSpotStream', 'Corniche-Ouest']">Corniche Ouest</a>    
             </div>
         </li>
