Wind forecast integration

--- a/src/app/meteoCard/meteoCard.component.html
+++ b/src/app/meteoCard/meteoCard.component.html
@@ -14,4 +14,6 @@
 			</iframe>
 		</div>
 	</div>
+	<iframe class="widget-container card card-1" width="650" height="450" src="https://embed.windy.com/embed2.html?lat=14.730&lon=-17.439&zoom=11&level=surface&overlay=wind&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=48.854&detailLon=2.353&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">
+	</iframe>
 </div>
