Override iframe css

--- a/src/app/meteoCard/meteoCard.component.html
+++ b/src/app/meteoCard/meteoCard.component.html
@@ -1,7 +1,7 @@
 <link href="//fr.surf-forecast.com/stylesheets/widget.css" media="screen" rel="stylesheet" type="text/css" />
 
 <div class="wf-width-cont surf-fc-widget center">
-	<div class="widget-container">
+	<div class="widget-container" style="margin-left: 85px">
 		<div class="external-cont">
 			<iframe 
 				class="surf-fc-i" 
@@ -14,6 +14,6 @@
 			</iframe>
 		</div>
 	</div>
-	<iframe class="widget-container card card-1" width="650" height="450" src="https://embed.windy.com/embed2.html?lat=14.730&lon=-17.439&zoom=11&level=surface&overlay=wind&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=48.854&detailLon=2.353&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">
+	<iframe class="widget-container card card-1" style="border-radius: 7px" width="800" height="500" src="https://embed.windy.com/embed2.html?lat=14.730&lon=-17.439&zoom=11&level=surface&overlay=wind&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=48.854&detailLon=2.353&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">
 	</iframe>
 </div>
