--- a/src/app/meteoCard/meteoCard.component.css
+++ b/src/app/meteoCard/meteoCard.component.css
@@ -18,3 +18,7 @@
   .card-1:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
+
+  .widget-container {
+    border-radius: 7px;
+  }
