Refactor wind iFrame

--- a/src/app/meteoCard/meteoCard.component.html
+++ b/src/app/meteoCard/meteoCard.component.html
@@ -14,6 +14,7 @@
 			</iframe>
 		</div>
 	</div>
-	<iframe class="widget-container card card-1" style="border-radius: 7px" width="800" height="500" src="https://embed.windy.com/embed2.html?lat=14.730&lon=-17.439&zoom=11&level=surface&overlay=wind&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=48.854&detailLon=2.353&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0">
+	<iframe class="widget-container card card-1" style="border-radius: 7px" width="800" height="500" src="https://embed.windy.com/embed2.html?lat=14.710&lon=-17.435&zoom=11&level=surface&overlay=wind&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&detailLat=14.615&detailLon=-18.864&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0">
 	</iframe>
 </div>
+
