absolute path for surf foreCast widget

--- a/src/app/meteoCard/meteoCard.component.html
+++ b/src/app/meteoCard/meteoCard.component.html
@@ -1,4 +1,4 @@
-<link href="//fr.surf-forecast.com/stylesheets/widget.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="http://fr.surf-forecast.com/stylesheets/widget.css" media="screen" rel="stylesheet" type="text/css" />
 
 <div class="wf-width-cont surf-fc-widget center">
 	<div class="widget-container" style="margin-left: 85px">
