--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" routerLink="/" >SeneSurf</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,14 +37,18 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/prestations" >Cours et Surf trips</a>
         </li>
+
       </ul>
 
-
-      
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="..." aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
-      </form>
+      <ul class="navbar-nav">
+          <li class="nav-item social-icon">
+              <a href="https://www.facebook.com/SeneSurf/" class="fab fa-facebook-square fa-lg"></a>
+          </li>
+    
+          <li class="nav-item social-icon">
+              <a href="https://www.instagram.com/senesurf/" class="fab fa-instagram fa-lg"></a>
+          </li>
+      </ul>
     </div>
   </nav>
   
