font-family change

--- a/src/app/pages/surfSpot-page/surfSpot-page.component.html
+++ b/src/app/pages/surfSpot-page/surfSpot-page.component.html
@@ -1,5 +1,6 @@
 <div class = "text-center">
-  <h3>{{surfSpotName}}</h3>
+  <h3>LiveStream : {{surfSpotName}} </h3>
   <app-card></app-card>
+  <h3>Conditions météo</h3>
   <app-meteoCard [foreCastUrl] = foreCastUrl></app-meteoCard>
 </div>
