--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<!--The content below is only a placeholder and can be replaced.-->
+<html>
+    <!-- Top nav bar -->
+    <app-navbar></app-navbar>
 
-<!-- Top nav bar -->
-<app-navbar></app-navbar>
-
-<!-- application body -->
-<router-outlet></router-outlet>
+    <!-- application body -->
+    <router-outlet></router-outlet>
+</html>
