--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,7 @@
     <app-navbar></app-navbar>
 
     <!-- application body -->
-    <router-outlet></router-outlet>
+    <body>
+        <router-outlet></router-outlet>
+    </body>
 </html>
