--- a/src/app/pages/events-page/events-page.component.html
+++ b/src/app/pages/events-page/events-page.component.html
@@ -1,3 +1,17 @@
-<p>
-  Deployment needs build first !
-</p>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-12 p-0">
+          <div class="min-vh-100 text-center m-0 d-flex flex-column justify-content-center">
+              <h1 class="display-4">Jumbotron</h1>
+              <p class="lead">This is a full-screen centered hero unit.</p>
+              <p class="lead">
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+              </p>
+
+              <app-card>
+          
+                </app-card>
+          </div>
+      </div>
+  </div>
+</div>
