WIP : Responsive livestream page

--- a/src/app/pages/events-page/events-page.component.html
+++ b/src/app/pages/events-page/events-page.component.html
@@ -8,9 +8,8 @@
                   <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
               </p>
 
-              <app-card>
-          
-                </app-card>
+              <app-card></app-card>
+
           </div>
       </div>
   </div>
