--- a/src/app/pages/surfSpot-page/surfSpot-page.component.html
+++ b/src/app/pages/surfSpot-page/surfSpot-page.component.html
@@ -1,5 +1,5 @@
 <!-- Responsive setup-->
-<div class="container">
+<div class="container text-center">
   <div class="row">
     <div class="col-12">
         <!-- Component's body -->
