--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,3 +1,3 @@
-<p>
-  shop works!
-</p>
+<div *ngFor="let article of articleList">
+    <app-shopArticleCard [article]= article></app-shopArticleCard>
+</div>
