--- a/src/app/SharedComponents/meteoCard/meteoCard.component.html
+++ b/src/app/SharedComponents/meteoCard/meteoCard.component.html
@@ -2,18 +2,18 @@
 <div class="wf-width-cont surf-fc-widget center col">
 	<div class="widget-container">
 		<div class="external-cont">
-			<iframe 
-				class="surf-fc-i" 
-				allowtransparency="true" 
+			<iframe
+				class="surf-fc-i"
+				allowtransparency="true"
 				[src]= "sanitizer.bypassSecurityTrustResourceUrl(foreCastUrl)"
-				scrolling="no" 
-				frameborder="0" 
-				marginwidth="auto" 
+				scrolling="no"
+				frameborder="0"
+				marginwidth="auto"
 				marginheight="auto">
 			</iframe>
 		</div>
 	</div>
-	<iframe class="widget-container card card-1 col" style="border-radius: 7px" height="500 px" src="https://embed.windy.com/embed2.html?lat=14.710&lon=-17.435&zoom=11&level=surface&overlay=wind&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&detailLat=14.615&detailLon=-18.864&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0">
+	<iframe class="widget-container card card-1 col" style="border-radius: 7px; padding: 0;" height="500 px" src="https://embed.windy.com/embed2.html?lat=14.710&lon=-17.435&zoom=11&level=surface&overlay=wind&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&detailLat=14.615&detailLon=-18.864&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0">
 	</iframe>
 </div>
 
