--- a/src/app/SharedComponents/shopArticleCard/shopArticleCard.component.html
+++ b/src/app/SharedComponents/shopArticleCard/shopArticleCard.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
 
           <div class="container card card-1">
-              <img [src]= this.article.imagesUrl[0]>
+              <img class="img-card" [src]= this.article.imagesUrl[0]>
               <p> {{this.article.description }} </p>
               <p>Prix : {{this.article.price}} €</p>
             </div>
